# yazpgp

./: CMakeLists.txt  README.md  build.sh
assets/models/: rat.mtl  tree.fbx  tree.mtl
assets/shaders/ambient/: ambient.fs
assets/shaders/blinn/: blinn.fs  blinn.vs
assets/shaders/constant/: constant.fs
assets/shaders/default/: default.vs
assets/shaders/grass/: grass.fs
assets/shaders/lambert/: lambert.fs
assets/shaders/normals/: normals.vs
assets/shaders/phong/: phong.fs
assets/shaders/phong_textured/: phong_textured.fs  phong_textured.vs
assets/shaders/phong_textured_normals/: phong_textured_normals.fs  phong_textured_normals.vs
assets/shaders/phong_without_clip/: phong_without_clip.fs
assets/shaders/rtx/: rtx.fs
assets/shaders/skybox/: skybox.fs  skybox.vs
assets/shaders/textured/: textured.fs  textured.vs
shaders/default/: default.fs  default.vs
shaders/normals/: normals.fs  normals.vs
src/: application.cpp  camera.cpp  cubemap.cpp  debug_ui.cpp  demo_scenes.cpp  input_manager.cpp  io.cpp  main.cpp  mesh.cpp  phong_blinn_material.cpp  renderable_entity.cpp  scene.cpp  shader.cpp  skybox.cpp  texture.cpp  texture2d.cpp  vertex_attributes.cpp  window.cpp
src/include/: bezier_curve.hpp
src/include/models/: plain.h  sphere.h  suzi_flat.h  suzi_smooth.h
src/include/yazpgp/: application.hpp  asset_storage.hpp  bezier_list.hpp  camera.hpp  cubemap.hpp  demo_scenes.hpp  event.hpp  event_distributor.hpp  event_producer.hpp  event_source.hpp  input_manager.hpp  io.hpp  keys.hpp  light.hpp  logger.hpp  material.hpp  mesh.hpp  phong_blinn_material.hpp  renderable_entity.hpp  scene.hpp  shader.hpp  skybox.hpp  texture.hpp  texture_2d.hpp  transform.hpp  vertex.hpp  vertex_attributes.hpp  window.hpp
src/include/yazpgp/debug/: debug_ui.hpp  debug_ui_def.hpp
src/include/yazpgp/lights/: directional_light.hpp  light.hpp  point_light.hpp  spot_light.hpp
